Conociendo el conjunto de datos

--- a/challenge2-data-science-LATAM-main/TelecomX_LATAM.ipynb
+++ b/challenge2-data-science-LATAM-main/TelecomX_LATAM.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "id": "1--uPM88l7JH"
       },
@@ -125,7 +125,7 @@
               "4  {'Contract': 'Month-to-month', 'PaperlessBilli...  "
             ]
           },
-          "execution_count": 1,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -141,6 +141,239 @@
         "\n",
         "# Mostrar las primeras filas del DataFrame para verificar la carga\n",
         "datos.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "custom-cell-1"
+      },
+      "source": [
+        "### Conociendo el Conjunto de Datos\n",
+        "\n",
+        "Ahora que los datos han sido extraídos y cargados en un DataFrame, el siguiente paso es familiarizarnos con su estructura. Esto implica entender qué información contiene cada columna, los tipos de datos presentes y la forma general del dataset. Esta exploración inicial es crucial para planificar los pasos de limpieza y transformación."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "custom-cell-2"
+      },
+      "source": [
+        "#### Exploración de Columnas y Tipos de Datos\n",
+        "\n",
+        "Vamos a utilizar el método `.info()` de Pandas para obtener un resumen técnico de nuestro DataFrame. `.info()` nos dará una visión general de las columnas, la cantidad de valores no nulos y el uso de memoria."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "custom-cell-3"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 7267 entries, 0 to 7266\n",
+            "Data columns (total 6 columns):\n",
+            " #   Column      Non-Null Count  Dtype \n",
+            "---  ------      --------------  ----- \n",
+            " 0   customerID  7267 non-null   object\n",
+            " 1   Churn       7267 non-null   object\n",
+            " 2   customer    7267 non-null   object\n",
+            " 3   phone       7267 non-null   object\n",
+            " 4   internet    7267 non-null   object\n",
+            " 5   account     7267 non-null   object\n",
+            "dtypes: object(6)\n",
+            "memory usage: 340.8+ KB\n"
+          ]
+        }
+      ],
+      "source": [
+        "datos.info()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "custom-cell-4"
+      },
+      "source": [
+        "#### Primeras Observaciones\n",
+        "\n",
+        "De la salida anterior, notamos algo muy importante: las columnas `customer`, `phone`, `internet`, y `account` son de tipo `object`. Al observar las primeras filas con `.head()`, vimos que contienen datos anidados, similares a un diccionario o JSON. \n",
+        "\n",
+        "Esto significa que una parte crucial de la fase de **Transformación** será \"desanidar\" o \"normalizar\" estas columnas para que cada pieza de información (como el género del cliente, si tiene servicio de teléfono, el tipo de contrato, etc.) se convierta en su propia columna en el DataFrame. La columna `Churn` parece ser nuestro objetivo principal para el análisis, indicando si un cliente ha cancelado el servicio o no."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dict-intro"
+      },
+      "source": [
+        "#### Contenido del Diccionario de Datos\n",
+        "\n",
+        "Para facilitar la consulta, a continuación se muestra el contenido del diccionario de datos:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dict-content"
+      },
+      "source": [
+        "```\n",
+        "- `customerID`: número de identificación único de cada cliente\n",
+        "- `Churn`: si el cliente dejó o no la empresa\n",
+        "- `gender`: género (masculino y femenino)\n",
+        "- `SeniorCitizen`: información sobre si un cliente tiene o no una edad igual o mayor a 65 años\n",
+        "- `Partner`: si el cliente tiene o no una pareja\n",
+        "- `Dependents`: si el cliente tiene o no dependientes\n",
+        "- `tenure`: meses de contrato del cliente\n",
+        "- `PhoneService`: suscripción al servicio telefónico\n",
+        "- `MultipleLines`: suscripción a más de una línea telefónica\n",
+        "- `InternetService`: suscripción a un proveedor de internet\n",
+        "- `OnlineSecurity`: suscripción adicional de seguridad en línea\n",
+        "- `OnlineBackup`: suscripción adicional de respaldo en línea\n",
+        "- `DeviceProtection`: suscripción adicional de protección del dispositivo\n",
+        "- `TechSupport`: suscripción adicional de soporte técnico, menor tiempo de espera\n",
+        "- `StreamingTV`: suscripción de televisión por cable\n",
+        "- `StreamingMovies`: suscripción de streaming de películas\n",
+        "- `Contract`: tipo de contrato\n",
+        "- `PaperlessBilling`: si el cliente prefiere recibir la factura en línea\n",
+        "- `PaymentMethod`: forma de pago\n",
+        "- `Charges.Monthly`: total de todos los servicios del cliente por mes\n",
+        "- `Charges.Total`: total gastado por el cliente\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "inspect-intro"
+      },
+      "source": [
+        "#### Inspección de las Columnas Anidadas\n",
+        "\n",
+        "Como se observó, cuatro columnas (`customer`, `phone`, `internet`, `account`) contienen datos anidados. Antes de transformarlos, es crucial inspeccionar su estructura para entender los campos que contienen. Analizaremos el primer registro de cada una como muestra."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "inspect-customer"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'gender': 'Female',\n",
+              " 'SeniorCitizen': 0,\n",
+              " 'Partner': 'Yes',\n",
+              " 'Dependents': 'Yes',\n",
+              " 'tenure': 9}"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "datos[\"customer\"][0]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "inspect-phone"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'PhoneService': 'Yes', 'MultipleLines': 'No'}"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "datos[\"phone\"][0]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "id": "inspect-internet"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'InternetService': 'DSL',\n",
+              " 'OnlineSecurity': 'No',\n",
+              " 'OnlineBackup': 'Yes',\n",
+              " 'DeviceProtection': 'No',\n",
+              " 'TechSupport': 'Yes',\n",
+              " 'StreamingTV': 'Yes',\n",
+              " 'StreamingMovies': 'No'}"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "datos[\"internet\"][0]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "inspect-account"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'Contract': 'One year',\n",
+              " 'PaperlessBilling': 'Yes',\n",
+              " 'PaymentMethod': 'Mailed check',\n",
+              " 'Charges': {'Monthly': 65.6, 'Total': '593.3'}}"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "datos[\"account\"][0]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "inspect-summary"
+      },
+      "source": [
+        "#### Conclusiones de la Inspección\n",
+        "\n",
+        "Esta inspección confirma que estas columnas son efectivamente diccionarios que deberán ser expandidos. Las claves de estos diccionarios (`gender`, `SeniorCitizen`, `Contract`, `PaymentMethod`, etc.) se convertirán en las nuevas columnas de nuestro DataFrame.\n",
+        "\n",
+        "Todas estas variables son candidatas potenciales para analizar la evasión de clientes (`Churn`). En la fase de **Transformación**, nuestro primer paso será normalizar estos datos para poder utilizarlos en el análisis."
       ]
     },
     {
